feat: add dependency overview with filter and extract dependencies (#343)
